# nordnet-swing

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docs/research-memos/: 2026-05-edge-frontier.md
scripts/: run_backtest.py  run_breakout_oos.py  run_cross_asset_backtest.py  run_cross_asset_gap_oos.py  run_grinold_oos.py  run_mean_reversion_oos.py  run_oos_validation.py  run_orb_oos.py  sync_market_data.py  verify_setup.sh
tests/: test_assembly.py  test_breakout_confluence.py  test_cost_model.py  test_cross_asset_confluence.py  test_cross_asset_gap.py  test_grinold_portfolio.py  test_market_data_db.py  test_market_data_historical.py  test_market_data_integration.py  test_mean_reversion_extreme.py  test_oos.py  test_opening_range_break.py  test_performance.py  test_reversion_decomposition.py  test_runner.py  test_simulator.py  test_sma_crossover.py
