[project]
name = "nordnet-swing"
version = "0.1.0"
description = "Selective swing-trading system for Nordnet Markets index certificates"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Anders Karlsson", email = "anders@phaser.se" }
]
dependencies = [
    "pydantic>=2.5.0",
    "structlog>=24.0.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.40",
    "matplotlib>=3.8.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["notebooks/", "data/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
